--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -38,3 +38,17 @@ security:
   oauth2:
     resource:
       user-info-uri: http://${authserver.hostname}:${authserver.port}${authserver.contextPath}/current
+
+spring:
+ # Redis配置
+ redis:
+  host: localhost
+  port: 6379
+  password:
+  # 连接超时时间（毫秒）
+  timeout: 10000
+  pool:
+   max-idle: 20
+   min-idle: 5
+   max-active: 20
+   max-wait: 2
