--- a/config-repo/application.yml
+++ b/config-repo/application.yml
@@ -39,14 +39,24 @@ security:
     resource:
       user-info-uri: http://${authserver.hostname}:${authserver.port}${authserver.contextPath}/current
  
+#redis:
+#  host: localhost
+#  port: 6379
+#  password:
+#  # 连接超时时间（毫秒）
+#  timeout: 10000
+#  pool:
+#    max-idle: 20
+#    min-idle: 5
+#    max-active: 20
+#    max-wait: 2
+
 redis:
-  host: localhost
-  port: 6379
-  password:
-  # 连接超时时间（毫秒）
-  timeout: 10000
-  pool:
-    max-idle: 20
-    min-idle: 5
-    max-active: 20
-    max-wait: 2
+  cluster:
+    nodes:
+      - 10.1.1.241:7000
+      - 10.1.1.241:7001
+      - 10.1.1.241:7002
+      - 10.1.1.241:7003
+      - 10.1.1.241:7004
+      - 10.1.1.241:7005
